--- a/src/demo/plan.html
+++ b/src/demo/plan.html
@@ -23,20 +23,14 @@
     <button title="刷新"><i class="fa fa-refresh"></i>刷新</button>
   </div>
 </div>
-<!-- <script type="text/x-kendo-template" class="dialog-choose-user">
-  <label for="user-optional" style="width: 270px;display: inline-block;">Employees</label>
-  <label for="user-selected">Developers</label>
-  <select id="user-optional"></select>
-  <select id="user-selected"></select>
-</script> -->
 <script type="text/javascript">
-  $(function(){
+  $(function () {
     var $el = $('#plan');
     $el.attr('id', '');
     // var data = $el.closest('.k-content').data('content');
     var validationSuccess = $(".validation-success", $el);
     // 状态
-    $(".stepper",$el).kendoStepper({
+    $(".stepper", $el).kendoStepper({
       steps: [{
         label: "新建",
         icon: "home"
@@ -178,18 +172,18 @@
               label: "更新人:",
               colSpan: 1
             },
-          {
-            field: "select_people",
-            label: "选人:",
-            colSpan: 2,
-            editor: 'AutoComplete',
-            editorOptions: {
-              enable: false,
-              separator: ", ",
-              dataTextField: "key",
-              dataValueField: "value",
-            }
-          },
+            {
+              field: "select_people",
+              label: "选人:",
+              colSpan: 2,
+              editor: 'AutoComplete',
+              editorOptions: {
+                enable: false,
+                separator: ", ",
+                dataTextField: "key",
+                dataValueField: "value",
+              }
+            },
           ]
         },
       ],
@@ -352,8 +346,33 @@
                   },
                 });
                 $window.data("kendoWindow").center().open();
-                require(['../src/demo/window/main'], function(initFn){
-                  initFn($el.find('.info-grid'), $window,function(sel_data){
+                // var okFn = function(){
+                //   $el.find('.info-grid').data("kendoGrid").expandRow($el.find('.info-grid').find("tr.k-master-row")[index]);
+                //   $.each($window.data("sel_data"), function (i, item) {
+                //     if ((ids[parentId]).indexOf(item.code) == -1) {
+                //       ids[parentId].push(item.code);
+                //       info_data[parentId].push(item);
+                //     }
+                //   });
+                //   cancelFn();
+                // };
+
+                // var cancelFn = function(){
+                //   $window.find('.window-choose-location').data("kendoGrid").clearSelection();
+                //   // 关闭已打开的子表格 
+                //   // var openDetails = $(".info-grid .k-master-row td a.k-i-collapse");
+                //   // openDetails.each(function () {
+                //   //   $(this).click();
+                //   // })
+                //   $el.find('.info-grid').data("kendoGrid").collapseRow($el.find('.info-grid').find("tr.k-master-row")[index]);
+                //   // 打开对应的子表格
+                //   $el.find('.info-grid').data("kendoGrid").expandRow($el.find('.info-grid').find("tr.k-master-row")[index]);
+                //   $window.closest(".dialog").data("kendoWindow").close();
+                // };
+
+                // $window.on('click', '.btn-ok', okFn).on('click', '.btn-cancel', cancelFn);
+                require(['../src/demo/window/main'], function (initFn) {
+                  initFn($el.find('.info-grid'), $window, function (sel_data) {
                     $.each(sel_data, function (i, item) {
                       if ((ids[parentId]).indexOf(item.code) == -1) {
                         ids[parentId].push(item.code);
@@ -715,62 +734,32 @@
         trExpand = true
       }
     })
-
     // 多选人弹出框
-    var modalLen = $('.choose-user').length;
     var $chooseUser = $('.choose-user', $el)
-    $chooseUser.kendoDialog({
-      width: "540px",
-      height: "455px",
-      title: "选人",
-      closable: true,
-      content: `<div>
-        <label for="user-optional-${modalLen}" style="width: 270px;display: inline-block;">Employees</label>
-        <label for="user-selected-${modalLen}">Developers</label>
-        <select id="user-optional-${modalLen}"></select>
-        <select id="user-selected-${modalLen}"></select>
-      </div>`,
-      actions: [
-        { text: 'Close' },
-        {
-          text: 'OK',
-          primary: true,
-          action: function (e) {
-            var data = $("#user-selected-"+modalLen).data('kendoListBox').dataSource._data
-            var html = ''
-            data.forEach(item => {
-              html += item.value + ','
-            })
-            exampleform.data("kendoForm")._model.select_people = data
-            $('#select_people', $el).val(html)
-          }
-        }
-      ]
-    }).data('kendoDialog')
-
-    $("#user-optional-"+modalLen).kendoListBox({
-      dataTextField: "value",
-      dataValueField: "key",
-      dataSource: [
-        { key: 1, value: 'A' },
-        { key: 2, value: 'B' },
-        { key: 3, value: 'C' }
-      ],
-      connectWith: "user-selected-"+modalLen,
-      toolbar: {
-        position: "right",
-        tools: ["moveUp", "moveDown", "transferTo", "transferFrom", "transferAllTo", "transferAllFrom", "remove"]
-      }
-    });
-
-    $("#user-selected-"+modalLen).kendoListBox({
-      dataTextField: "value",
-      dataValueField: "key",
-    });
     $('div[data-container-for="select_people"]>span', $el).append('<span class="fa fa-user"></span>')
     $('div[data-container-for="select_people"]', $el).click(function () {
-      $chooseUser.data("kendoDialog").open();
-    })
+      //选人弹出框
+      $chooseUser.kendoWindow({
+        width: "540px",
+        height: "400px",
+        title: "选人",
+        content: "./choose-user/index.html",
+        modal: {
+          preventScroll: true
+        },
+      }).data("kendoWindow").center().open()
 
+      $chooseUser.on('click', '.user-true', function () {
+        var $len = $('.window-choose-user').length
+        var html = ''
+        var sel_user = $("#user-selected-" + $len).data('kendoListBox').dataSource._data
+        sel_user.forEach(item => {
+          html += item.value + ','
+        })
+        exampleform.data("kendoForm")._model.select_people = sel_user
+        $('#select_people', $el).val(html)
+        $chooseUser.data("kendoWindow").close();
+      });
+    })
   })
 </script>
