表单校验,显示名,源码修改

--- a/src/demo/form.html
+++ b/src/demo/form.html
@@ -91,11 +91,15 @@
               }
             },
             {
+              id: 'lastName',
               field: "LastName",
-              label: "Last Name:",
+              label: "名(label):",
+              title: "名(title):",
               colSpan: 1,
               editor: "NumericTextBox",
-              validation: { required: true }
+              validation: { 
+                required: true
+              }
             },
             {
               field: "Email",
