--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <header class="menu">
+  <header class="menu  k-widget k-reset k-header k-menu k-menu-horizontal">
     <ul id="horizontalMenu"></ul>
   </header>
   <div id="tabstrip"></div>
