--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -100,7 +100,7 @@
       })
       $("#horizontalMenu").kendoMenu({
         dataSource: inlineDefault,
-        scrollable: true
+        // scrollable: true
       });
 
       // openWareHouseDialog
