--- a/src/demo/plan.html
+++ b/src/demo/plan.html
@@ -711,9 +711,7 @@
     })
 
     $('.fa-close', $el).on('click', function () {
-      let idx = $('.k-state-active').attr('aria-controls').split('-')[1]
-      $("#tabstrip").data("kendoTabStrip").remove(idx - 1);
-      $("#tabstrip").data("kendoTabStrip").select(0);
+      fun.closeCurrentPage()
     })
 
     // 必填
@@ -721,10 +719,7 @@
 
     // 跳转到指定页面，并刷新
     $(".fa-refresh", $el).closest('button').click(function () {
-      var contentUrl = $("#tabstrip").data("kendoTabStrip")._contentUrls
-      var idx = contentUrl.indexOf('./frozen.html')
-      $("#tabstrip").data("kendoTabStrip").select(idx);
-      $("#tabstrip").data("kendoTabStrip").reload("li:eq(" + idx + ")");
+      fun.jumpRefresh('./frozen.html')
     })
 
     var trExpand = true
